	to recheck the design. Now this doesn't happen.

	Turned on some `message()`s when the user asks for too many permutations
	(more than the set of possible permutations) and when the set of
	possible permutations is smaller than the `minperm` value stored in the
	`"how"` object. The latter notifies the user that the entire set of
	permutations is being generated.

Version 0.7-6

	* summary.allPerms: Was printing two slightly different subtitles.

	* More unit tests...

Version 0.7-5

	* how: the matched call is now returned permitting the use of
	`update()` to update elements of a stored permutation design object.
	Suggested by Jari Oksanen.

	`how` also gains an argument `make` which is the user-level way
	to control whether all possible permutations are actually
	created should the heuristics in `check()` decide they should be.

	The `print` method for class "how" wasn't printing details of
	mirroring or constant settings for within-plot components.

	* shuffleSet: was incorrectly recombining individual block-level
	permutations.
	Reported by Jari Oksanen.

	Gains an argument, `check`, which allows the user to control whether
	the permutation design should be checked. In small data sets or where
	there are very few permutations, `shuffleSet` could generate more
	permutations (i.e. all possible ones) than requested. Turning off this
	checking with `check = FALSE` will result in exactly `nset`
	permutations being returned, but without a gaurantee that they will
	be unique.

	* numPerms: fixed a bug where `numPerms()` was ignoring Blocks when
	computing the number of possible permutations.

	* Within, Plots: as with `how()`, the matched call is now returned
	as part of the list object, allowing desirable `update()` behaviour.

	* allPerms, doAllPerms: now correctly work in presence of blocks,
	and where there are no plots.

	`allPerms` now includes the permutation design (its `control`
	argument) as an attribute, `"control"`, on the returned matrix of
	permutations.